保存文件json可以了

--- a/content/scraper.html
+++ b/content/scraper.html
@@ -140,11 +140,14 @@
 
                 <!-- 数据导出区域 -->
                 <div class="export-section" style="margin-top: 20px;">
+                    <button class="btn btn-success" id="btn-save-file" style="margin-right: 10px;">
+                        💾 保存为文件
+                    </button>
                     <button class="btn btn-primary" id="btn-show-json" style="margin-right: 10px;">
-                        📄 显示JSON数据
+                        📄 显示JSON
                     </button>
                     <button class="btn btn-secondary" id="btn-copy-data">
-                        📋 复制到剪贴板
+                        📋 复制
                     </button>
                 </div>
                 <div id="export-data-container" style="display: none; margin-top: 15px;">
