换成chpp api后速度再次提升

--- a/content/scraper.html
+++ b/content/scraper.html
@@ -63,6 +63,11 @@
                         <input type="checkbox" id="opt-ratings" checked>
                         <span>包含最终评级</span>
                     </label>
+                    <label class="checkbox-label"
+                        style="grid-column: span 2; margin-top: 10px; padding-top: 10px; border-top: 1px dashed #ccc;">
+                        <input type="checkbox" id="opt-use-chpp">
+                        <span style="color: #2e7d32; font-weight: bold;">⚡ 使用 CHPP API (极速模式 - 需授权)</span>
+                    </label>
                 </div>
                 <div class="input-group inline">
                     <label for="interval">请求间隔 (秒):</label>
