--- a/content/scraper.html
+++ b/content/scraper.html
@@ -66,7 +66,8 @@
                     <label class="checkbox-label"
                         style="grid-column: span 2; margin-top: 10px; padding-top: 10px; border-top: 1px dashed #ccc;">
                         <input type="checkbox" id="opt-use-chpp">
-                        <span style="color: #2e7d32; font-weight: bold;">⚡ 使用 CHPP API (极速模式 - 需授权)</span>
+                        <span style="color: #2e7d32; font-weight: bold;">⚡ 使用 CHPP API (极速模式)</span>
+                        <span id="chpp-status" style="font-size: 0.9em; margin-left: 5px; color: #666;"></span>
                     </label>
                 </div>
                 <div class="input-group inline">
